--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-calendar": "^3.4.0",
