--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-calendar": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
