--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.0",
     "classnames-prefix": "^0.0.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.23.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
